--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- Font Awesome 5 -->
+    <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
   </head>
-  <body  style="min-height: 75rem; padding-top: 4.5rem;">
+  <body  style="padding-top: 4.5rem;">
     <nav id="navbar"></nav>
     <div id="app"></div>
     <!-- built files will be auto injected -->
