Finish xhr loading

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
   </head>
   <body  style="padding-top: 4.5rem;">
+    <!-- https://codepen.io/svinkle/pen/hdpBD  &&  https://codepen.io/bermudaquest/pen/EjMREW -->
+    <div class="loading" style="display: none;">
+        <div class="loader">
+          <div class="inner one"></div>
+          <div class="inner two"></div>
+          <div class="inner three"></div>
+          <div class="nucleus"></div>
+        </div>
+      </div>
     <nav id="navbar"></nav>
     <div id="app"></div>
     <!-- built files will be auto injected -->
