finish data view v.1

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       </div>
     <nav id="navbar"></nav>
     <div id="app"></div>
+    <div id="foot"></div>
     <!-- built files will be auto injected -->
 
     <!-- Optional JavaScript -->
