:watch: update all before close this project

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>TJ-SIF 2018 Website</title>
+    <title>TJ-SSF 2018 Website</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -11,8 +11,18 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
   </head>
   <body  style="padding-top: 4.5rem;">
+    <!-- https://codepen.io/svinkle/pen/hdpBD  &&  https://codepen.io/bermudaquest/pen/EjMREW -->
+    <div class="loading" style="display: none;">
+        <div class="loader">
+          <div class="inner one"></div>
+          <div class="inner two"></div>
+          <div class="inner three"></div>
+          <div class="nucleus"></div>
+        </div>
+      </div>
     <nav id="navbar"></nav>
     <div id="app"></div>
+    <div id="foot"></div>
     <!-- built files will be auto injected -->
 
     <!-- Optional JavaScript -->
